# nl2spec

./: .gitignore  cli.py  config.py  config.yaml  exceptions.py  logging_utils.py  pipeline_types.py  pyproject.toml  requirements.txt
analysis/: rq1_canonical_equivalence.py
analysis/comparators/: canonical_json.py
analysis/metrics/: exact_match.py
core/comparator/: compare_ir.py  mop_to_ir.py
core/convert/: ere.py  ere_anatomy.json  event.py  event_anatomy.json  fsm.py  fsm_anatomy.json  ir_to_nl.py  ltl.py  ltl_anatomy.json  mop_to_ir.py
core/handlers/: ere_selector.py  event_selector.py  mmr.py  (+6 more)
pipeline/: compare.py  exceptions.py  generate.py  nl_loader.py  prompting.py  runner.py  stage_compare.py  stage_llm.py  stages copy.py  stages.py  stages_fewshot.py
prompts/: build_prompt.py
scripts/: aggregate_results.py  app_generated_ir_to_mop.py  app_generated_ir_to_nl.py  app_generated_mop_to_ir.py  compare_baseline_vs_generated.py  convert_ir_to_nl.py  convert_mop_to_ir.py  merge_llm_results.py  run_analisy_specs_all_dashboard.py  run_analisy_specs_syntac_semantic_dashboard.py  run_compare_specs_semantic.py  run_fewshot_selection_experiment.py  run_generated_ir_to_mop.py  run_generated_ir_to_nl.py  run_generated_mop_to_ir.py  run_generated_mop_to_nl.py  run_generated_prompt_to_llm.py
tests/: mocks.py  test_build_prompt.py  test_compare_ir.py  test_fewshot_loader.py  test_generate.py  test_manual_compare.py  test_manual_generate.py  test_manual_prompt.py  test_mop_to_ir.py  test_pipeline_mocked.py  test_prompt_builder.py  test_schema_validation.py
(+873 files in other folders)
